// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contract configure() errors for invalid option type passed 1`] = `
"The following validations have failed for \`OptionalProps\`:
  - Invalid field \\"foo\\". Must be a string, received number."
`;

exports[`Contract configure() errors for unknown option 1`] = `
"The following validations have failed for \`OptionalProps\`:
  - Unknown fields: unknown."
`;

exports[`Contract configure() freezes the object 1`] = `"Cannot assign to read only property 'foo' of object '#<Object>'"`;

exports[`Contract constructor() errors for invalid option type passed 1`] = `
"The following validations have failed for \`OptionalProps\`:
  - Invalid field \\"foo\\". Must be a string, received number."
`;

exports[`Contract constructor() errors for unknown option 1`] = `
"The following validations have failed for \`OptionalProps\`:
  - Unknown fields: unknown."
`;

exports[`Contract constructor() requires non-optional options to be passed 1`] = `
"The following validations have failed for \`RequiredProps\`:
  - Invalid field \\"bar\\". Field is required and must be defined."
`;
